<resources>
    <string name="app_name">Shop Plan</string>
    <string name="login_title">ShopPlan</string>
    <string name="login_hello">Hi, welcome back!</string>
    <string name="login_email_hint">Email</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_loginButton">LOGIN</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_dont_have_account">Don\'t have an account?</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="register_create_an_account">Create an account</string>
    <string name="register_enter_your_password">Enter your password</string>
    <string name="register_enter_your_phone_number">Enter your phone number</string>
    <string name="register_enter_your_email">Enter your email</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="register_log_in">Login</string>
    <string name="register_button">SIGN UP</string>
    <string name="phone_number">Phone number</string>
    <string name="user_correo">nilson.angulo.nazareno@epn.edu.ec</string>
    <string name="email">Email</string>
    <string name="title_activity_delete_product">Eliminar producto</string>
    <!-- app/src/main/res/values/strings.xml -->
    <string name="main_add_product">Agregar producto</string>
    <string name="facebook_app_id">TU_FACEBOOK_APP_ID</string>
    <string name="facebook_client_token">TU_CLIENT_TOKEN</string>
</resources>