<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Register">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="223dp"
        android:layout_height="195dp"
        android:src="@drawable/shopping_cart2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <TextView
        android:id="@+id/register_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend_bold"
        android:text="@string/register_create_an_account"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/login_logo" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/lexend"
        android:hint="@string/register_enter_your_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_create_account"
        app:layout_constraintWidth_percent="0.85" />

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/lexend"
        android:hint="@string/register_enter_your_phone_number"
        android:inputType="phone"
        android:padding="12dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email"
        app:layout_constraintWidth_percent="0.85" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="351dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/lexend"
        android:hint="@string/register_enter_your_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/scaled_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_phone"
        app:layout_constraintWidth_percent="0.75" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="351dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/logo_name"
        android:fontFamily="@font/lexend_bold"
        android:text="@string/register_button"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

    <Button
        android:id="@+id/login_facebook_button"
        android:layout_width="293dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/scaled_facebook"
        android:drawablePadding="12dp"
        android:fontFamily="@font/lexend"
        android:text="@string/login_with_facebook"
        android:textColor="#1877F3"
        android:textSize="16sp"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

    <Button
        android:id="@+id/login_google_button"
        android:layout_width="293dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/scaled_google"
        android:drawablePadding="12dp"
        android:fontFamily="@font/lexend"
        android:text="@string/login_with_google"
        android:textColor="#817E7E"
        android:textSize="16sp"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_facebook_button" />

    <LinearLayout
        android:id="@+id/login_signup_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_google_button">

        <TextView
            android:id="@+id/register_already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexend"
            android:text="@string/already_have_account"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <Button
            android:id="@+id/register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/lexend_bold"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:stateListAnimator="@null"
            android:text="@string/register_log_in"
            android:textColor="@color/logo_name"
            android:textSize="13sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>