<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    android:backgroundTint="#FFFFFF"
    tools:context=".UserActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/user_toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowSplashScreenIconBackgroundColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/user_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/user_search"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar" />

    <ImageButton
        android:id="@+id/user_menu_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/menu_svgrepo_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/menu_svgrepo_com" />

    <SearchView
        android:id="@+id/user_search"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/user_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/user_my_bag_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_bag" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_bold"
                android:paddingStart="8dp"
                android:text="My bag"
                android:textColor="#4CAF50"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_history_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_history" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_bold"
                android:paddingStart="8dp"
                android:text="History"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/user_save_button"
        android:layout_width="137dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:backgroundTint="@color/buttonSaveColor"
        android:fontFamily="@font/lexend_bold"
        android:text="Save"
        android:textColor="@color/buttonTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_gender_input"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/user_sign_out_button"
        android:layout_width="137dp"
        android:layout_height="47dp"
        android:layout_weight="1"
        android:backgroundTint="@color/buttonCancelColor"
        android:fontFamily="@font/lexend_bold"
        android:text="Sign out"
        android:textColor="@color/inputTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_save_button"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="564dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_password_input"
        android:layout_width="327dp"
        android:layout_height="39dp"
        android:backgroundTint="@color/inputBackground"
        android:hint="*******"
        android:fontFamily="@font/lexend_bold"
        android:textColor="@color/inputTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_password_label"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/user_gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Gender"
        android:fontFamily="@font/lexend_bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_password_input" />

    <TextView
        android:id="@+id/user_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Password"
        android:fontFamily="@font/lexend_bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_phone_input" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_gender_input"
        android:layout_width="327dp"
        android:layout_height="39dp"
        android:backgroundTint="@color/inputBackground"
        android:hint="male"
        android:fontFamily="@font/lexend_bold"
        android:textColor="@color/inputTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_gender_label"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_phone_input"
        android:layout_width="327dp"
        android:layout_height="39dp"
        android:layout_marginTop="1dp"
        android:backgroundTint="@color/inputBackground"
        android:hint="09******87"
        android:fontFamily="@font/lexend_bold"
        android:textColor="@color/inputTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_phone_label"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/user_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend_bold"
        android:text="@string/email"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_email_input"
        android:layout_width="327dp"
        android:layout_height="39dp"
        android:backgroundTint="@color/inputBackground"
        android:hint="@string/user_correo"
        android:textColor="@color/inputTextColor"
        android:fontFamily="@font/lexend_bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email_label"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/user_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/phone_number"
        android:fontFamily="@font/lexend_bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email_input" />

    <ImageView
        android:id="@+id/user_profile_image"
        android:layout_width="144dp"
        android:layout_height="122dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/man" />

    <TextView
        android:id="@+id/user_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="176dp"
        android:text="NILSON ANGULO"
        android:fontFamily="@font/lexend_bold"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_image" />

</androidx.constraintlayout.widget.ConstraintLayout>